# slack-bot-rust

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  README.md
src/: client.rs  main.rs  model.rs  usecase.rs
src/client/: arxiv.rs  bigquery.rs  openai.rs  openapi.rs  slack.rs
src/model/: config.rs  gcp_cost.rs  openai.rs  paper.rs
src/usecase/: cost.rs  paper.rs
