[package]
name = "slack-bot-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version="1.0.71", features = ["backtrace"] }
arxiv-rs = "0.1.5"
async-openai = "0.12.1"
chrono = "0.4.26"
chrono-tz = "0.8.2"
dotenv = "0.15.0"
reqwest = { version="0.11.18", features = ["json"] }
serde = "1.0.167"
serde_json = "1.0.96"
tokio = { version="1.28.2", features = ["full"] }
